--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Widelab</title>
+    <title>Widelab — Design a product users really desire — Digital Agency for Digital Products.</title>
+    <link rel="shortcut icon" href="https://assets-global.website-files.com/6422b97da981524088bb0b36/648ab58aeb8ed148bd8e4e43_Widelab.webp" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
